--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ variables:
   workspace: 'quick-starts-ws-XXXXX'
   experiment: 'quick-starts-mlops'
   location: 'eastus'
-  aml_compute_target: 'aml-compute'
+  aml_compute_target: 'gpucluster'
   model_name: 'compliance-classifier'
   image_name: 'compliance-classifier-image'
 
